  * DrawInto methods:
    + New overloads that allow resizing.
    - Using alpha blending even if a ditherer is used for the drawing.
+ MetafileExtensions class:
  + New ToBitmap overload with keepAspectRatio parameter
+ New ScalingMode enum for Resize, DrawInto, DrawImage and DrawBitmapData extension methods

! KGySoft.Drawing.Imaging namespace:
====================================
! IBitmapData interface: BackColor and AlphaThreshold properties are now exposed by this interface. You can
  define these anyway when you use the Get[Readable/Writable/ReadWrite]BitmapData methods.
+ New ReadWriteBitmapDataExtensions class to provide some drawing methods for IReadWriteBitmapData instances.
+ Color32 struct: new ToOpaque method
+ PredefinedColorsQuantizer class:
  + New Argb8888 method
  + The FromBitmapData method has been made public


~~~~~~~~~
! v5.1.0:
~~~~~~~~~

* Assembly changes:
===================
* Referencing KGySoft.CoreLibraries 5.1.1

! KGySoft.Drawing namespace:
============================
! BitmapExtensions class
  ! The GetColorCount method does not transform pixels of wide color formats to 32-bit colors anymore so it may
    return a different result (an accurate one) for Bitmaps with 16-bit grayscale, 48-bit and 64-bit PixelFormats.
  - Clear method: fixing direct clearing (when no ditherer is used) for bitmaps with negative stride.
! Icons class:
  ! Combine methods:
    ! Icons larger than 64x64 were saved as compressed by default. Now compressing icons with size at least 256x256
      for better compatibility with some applications/platforms.
    ! Icon images with lower than 32 bits-per-pixel are not compressed anymore. Even Windows has problems with 24
      BPP compressed icons and transparency mask for lower BPPs can be generated only for uncompressed images.
    + Adding new overloads with IEnumerable<Icon> and IEnumerable<Bitmap> parameters.
! IconExtensions class: